--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,308 @@
-@charset "UTF-8";*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}html,body,div,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,ol,ul,li,form,legend,label,table,header,footer,nav,section,figure{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}header,footer,nav,section,article,hgroup,figure{display:block}.wrapper{display:inline-block}.wrapper:after{content:".";display:block;height:0;clear:both;visibility:hidden}* html .wrapper{height:1%}.wrapper{display:block}body{font-family:"Asap","HelveticaNeue","Arial",sans-serif;font-size:16px;line-height:1.428571429;color:#333333;background-color:#000}h1{font-size:4.4em;line-height:1.1em;color:#fff}h2{font-size:2.3em}h3{font-size:1.5em;font-weight:normal;color:#4d1521}hr{background-image:url(../img/background/hr.png);background-repeat:repeat;height:4px;border:none;margin:1.1em 0}ul li{list-style:none;margin-left:0.9em}ul li:before{color:#fff;margin-left:-0.7em;content:"\2022";font-size:1.5em;padding-right:.25em;position:relative;top:.1em}#nav{position:fixed;right:20px;top:20px;z-index:10;padding:11px;cursor:pointer}#nav .navbg{width:100%;height:100%;position:absolute;top:0;left:0;background-color:#fff;opacity:0.1;z-index:1;border-radius:6px}#nav ul li{margin:0;position:relative;z-index:10}#nav ul li:before{border-radius:5px 5px 5px 5px;color:#FFFFFF;content:"";display:block;font-size:0;width:0;height:0;margin-bottom:4px;padding:5px;border:solid 1px #FFFFFF;opacity:0.6}#nav ul li.active:before{opacity:1;background-color:#Fff}#mainContent,#content{width:100%;height:100%}#content{position:absolute}.slide{width:100%;height:100%;position:relative;overflow:hidden}.slide.is-center{text-align:center}.slide.is-center hr{width:10em;margin:1em auto;width:46em}.slide.A{background:url(../img/background/a.gif) repeat}.slide.B{background:url(../img/background/b.gif) repeat}.slide.C{background:url(../img/background/c.gif) repeat}.slide.D{background:url(../img/background/d.gif) repeat}.slide .content{width:100%;height:100%;position:relative;padding:1em 14% 0;top:17%}.slide .content.fixed{position:fixed;top:17%}.slide .content.static{position:fixed}.slide .sideBar{height:100%;padding-top:1em;position:absolute;right:0;top:0;width:100%;background-attachment:fixed;background-position:72% center;background-repeat:no-repeat}.slide .centerBar{width:100%;height:100%;position:absolute;right:0;top:0;background-attachment:fixed;background-position:center 10em;background-repeat:no-repeat}.slide .next{position:absolute;bottom:0;left:0;width:100%}.slide .next .box{margin:0 auto;width:60px;height:60px;position:relative;cursor:pointer}.slide .next button{border:none;width:100%;height:100%;background-color:#fff;border-radius:5px 5px 0 0;opacity:0.1;cursor:pointer}.slide .next .caret{background-image:url("../img/background/downCaret.png");bottom:18px;height:19px;left:13px;margin:0 auto;position:absolute;width:36px}.logo{position:absolute;top:14px;left:14px}.quaternary{color:#2e1d45}.column{width:40%;min-width:520px}
+@charset "UTF-8";
+/*------------------------------------*\
+	$SENTRA STYLE GUIDE
+\*------------------------------------*/
+/*-----------------------------------------------------*\
+  reset & variables & mixins
+\*-----------------------------------------------------*/
+/*------------------------------------*\
+    $RESET
+\*------------------------------------*/
+/* line 4, scss/imports/_reset.scss */
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 9, scss/imports/_reset.scss */
+html, body, div, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, ol, ul, li, form, legend, label, table, header, footer, nav, section, figure {
+  margin: 0;
+  padding: 0;
+}
+
+/* line 13, scss/imports/_reset.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 17, scss/imports/_reset.scss */
+header, footer, nav, section, article, hgroup, figure {
+  display: block;
+}
+
+/* Clearing floats without extra markup  */
+/* line 22, scss/imports/_reset.scss */
+.wrapper {
+  display: inline-block;
+}
+
+/* line 23, scss/imports/_reset.scss */
+.wrapper:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+/* line 24, scss/imports/_reset.scss */
+* html .wrapper {
+  height: 1%;
+}
+
+/* line 25, scss/imports/_reset.scss */
+.wrapper {
+  display: block;
+}
+
+/* Typography */
+/* line 14, scss/main.scss */
+body {
+  font-family: "Asap", "HelveticaNeue", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 1.428571429;
+  color: #333333;
+  background-color: #000;
+}
+
+/* line 22, scss/main.scss */
+h1 {
+  font-size: 4.4em;
+  line-height: 1.1em;
+  color: white;
+}
+
+/* line 26, scss/main.scss */
+h2 {
+  font-size: 2.3em;
+}
+
+/* line 29, scss/main.scss */
+h3 {
+  font-size: 1.5em;
+  font-weight: normal;
+  color: #4d1521;
+}
+
+/* line 35, scss/main.scss */
+hr {
+  background-image: url(../img/background/hr.png);
+  background-repeat: repeat;
+  height: 4px;
+  border: none;
+  margin: 1.1em 0;
+}
+
+/* line 43, scss/main.scss */
+ul li {
+  list-style: none;
+  /* if you’re not already using a reset */
+  margin-left: 0.9em;
+}
+
+/* line 47, scss/main.scss */
+ul li:before {
+  color: #fff;
+  /* set color to red */
+  margin-left: -0.7em;
+  content: "\2022";
+  /* /2022 is the numerical unicode for &bull; */
+  font-size: 1.5em;
+  /* set the font-size of the bullet if necessary. Make sure to use em or %*/
+  padding-right: .25em;
+  /* give the bullet some padding from the text Make sure to use em*/
+  position: relative;
+  top: .1em;
+  /* set the vertical position of the bullet if necessary. Make sure to use em or % */
+}
+
+/* line 57, scss/main.scss */
+#nav {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  z-index: 10;
+  padding: 11px;
+  cursor: pointer;
+}
+
+/* line 65, scss/main.scss */
+#nav .navbg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  opacity: 0.1;
+  z-index: 1;
+  border-radius: 6px;
+}
+
+/* line 75, scss/main.scss */
+#nav ul li {
+  margin: 0;
+  position: relative;
+  z-index: 10;
+}
+
+/* line 80, scss/main.scss */
+#nav ul li:before {
+  border-radius: 5px 5px 5px 5px;
+  color: #FFFFFF;
+  content: "";
+  display: block;
+  font-size: 0;
+  width: 0;
+  height: 0;
+  margin-bottom: 4px;
+  padding: 5px;
+  border: solid 1px #FFFFFF;
+  opacity: 0.6;
+}
+
+/* line 93, scss/main.scss */
+#nav ul li.active:before {
+  opacity: 1;
+  background-color: #Fff;
+}
+
+/* line 98, scss/main.scss */
+#mainContent, #content {
+  width: 100%;
+  height: 100%;
+}
+
+/* line 99, scss/main.scss */
+#content {
+  position: absolute;
+}
+
+/* line 1, scss/_slides.scss */
+.slide {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+/* line 6, scss/_slides.scss */
+.slide.is-center {
+  text-align: center;
+}
+/* line 8, scss/_slides.scss */
+.slide.is-center hr {
+  width: 10em;
+  margin: 1em auto;
+  width: 46em;
+}
+/* line 14, scss/_slides.scss */
+.slide.A {
+  background: url(../img/background/a.gif) repeat;
+}
+/* line 17, scss/_slides.scss */
+.slide.B {
+  background: url(../img/background/b.gif) repeat;
+}
+/* line 20, scss/_slides.scss */
+.slide.C {
+  background: url(../img/background/c.gif) repeat;
+}
+/* line 23, scss/_slides.scss */
+.slide.D {
+  background: url(../img/background/d.gif) repeat;
+}
+/* line 26, scss/_slides.scss */
+.slide .content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding: 1em 14% 0;
+  top: 20%;
+}
+/* line 31, scss/_slides.scss */
+.slide .content.fixed {
+  position: fixed;
+  top: 20%;
+}
+/* line 35, scss/_slides.scss */
+.slide .content.static {
+  position: fixed;
+}
+/* line 39, scss/_slides.scss */
+.slide .sideBar {
+  height: 100%;
+  padding-top: 1em;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  background-attachment: fixed;
+  background-position: 72% center;
+  background-repeat: no-repeat;
+}
+/* line 50, scss/_slides.scss */
+.slide .centerBar {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-attachment: fixed;
+  background-position: center 10em;
+  background-repeat: no-repeat;
+}
+/* line 59, scss/_slides.scss */
+.slide .next {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+/* line 64, scss/_slides.scss */
+.slide .next .box {
+  margin: 0 auto;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  cursor: pointer;
+}
+/* line 71, scss/_slides.scss */
+.slide .next button {
+  border: none;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 5px 5px 0 0;
+  opacity: 0.1;
+  cursor: pointer;
+}
+/* line 79, scss/_slides.scss */
+.slide .next .caret {
+  background-image: url("../img/background/downCaret.png");
+  bottom: 18px;
+  height: 19px;
+  left: 13px;
+  margin: 0 auto;
+  position: absolute;
+  width: 36px;
+}
+
+/* line 102, scss/main.scss */
+.logo {
+  position: absolute;
+  top: 14px;
+  left: 14px;
+}
+
+/* line 103, scss/main.scss */
+.quaternary {
+  color: #2e1d45;
+}
+
+/* line 104, scss/main.scss */
+.column {
+  width: 40%;
+  min-width: 520px;
+}
