--- a/css/scss/_slides.scss
+++ b/css/scss/_slides.scss
@@ -27,7 +27,7 @@
 		@include fullscreen;
 		position:relative;
 		padding:1em 14% 0;
-		top:20%;
+		top:8%;
 		&.fixed{
 			position:fixed;
 		}
@@ -36,7 +36,7 @@
 		}
 	}
 	&.is-wide .content{
-		top:8%;
+		top:1%;
 	}
 	& .sideBar{
 		height: 100%;
@@ -48,21 +48,14 @@
 	    background-attachment: fixed;
 	    background-position: 72% center;
 	    background-repeat: no-repeat;
-	}
-	& .centerBar{
-		@include fullscreen;
-	    position: absolute;
-	    right: 0;
-	    top: 0;
-	    background-attachment: fixed;
-	    background-position: center 10em;
-	    background-repeat: no-repeat;
+	    display: block;
 	}
 	& .next{
 		position:absolute;
 		bottom:0;
 		left:0;
 		width:100%;
+		display: block;
 		& .box{
 			margin:0 auto;
 			width:60px;
