--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -6,10 +6,10 @@
 /*-----------------------------------------------------*\
   reset & variables & mixins
 \*-----------------------------------------------------*/ 
-@import "imports/_reset.scss";
-@import "_vars.scss";
-@import "_mixins.scss";
-@import "_mediaqueries.scss";
+@import "imports/reset";
+@import "vars";
+@import "mixins";
+@import "mediaqueries";
 
 body {
   font-family: $font;
@@ -61,6 +61,7 @@ ul li:before {
 	z-index:10;
 	padding:11px;
     cursor: pointer;
+    display: block;
 }
 #nav .navbg{
 	@include fullscreen;
@@ -97,7 +98,10 @@ ul li:before {
 
 #mainContent, #content{width:100%; height:100%;}
 #content{position:absolute;}
-@import "_slides.scss";
+@media only screen and (min-width: 1366px) {
+	@import "slides";
+}
+
 
 .logo{position:absolute; top:14px; left:14px;}
 .quaternary {color:$quaternary;}
