--- a/css/scss/320andup.scss
+++ b/css/scss/320andup.scss
@@ -11,7 +11,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 @import "mixins";
 // 480px
 
-@import "responsive/480";
+@import "responsive/base";
 
 
 // 600px
