--- a/css/scss/responsive/_992.scss
+++ b/css/scss/responsive/_992.scss
@@ -72,8 +72,18 @@
 		left:0;
 		width:100%;
 		display: block;
+		text-align: center;
+		& span{
+			display:inline-block;
+			padding:1em;
+			color:$secondary;
+			font-size:1.2em;
+			font-style:italic;
+			position: relative;
+			top:0.2em;
+		}
 		& .box{
-			margin:0 auto;
+			display:inline-block;
 			width:60px;
 			height:60px;
 			position:relative;
@@ -126,6 +136,11 @@
 	z-index:1;
 	border-radius:6px;
 }
+
+#nav .toolTip{
+
+}
+
 #nav ul li{
 	margin:0;
 	position:relative;
