--- a/css/scss/responsive/_base.scss
+++ b/css/scss/responsive/_base.scss
@@ -49,8 +49,8 @@
 		}
 	}
 	& .content.map{
-		padding:0 8%;
-		& h3{margin-bottom:1em;}
+		padding:8%;
+		& h3{margin-bottom:1em; font-size:1em;}
 	}
 	&.is-wide .content{
 		top:1%;
@@ -87,7 +87,7 @@ p{font-size:1.5em;}
 #mapKey{
 	position:absolute; 
 	left:4%; 
-	top:36%; 
+	top:39%; 
 	display:block;
 	& img{
 		width:90%
@@ -205,7 +205,9 @@ p{font-size:1.5em;}
 }
 
 
-
+.toolTip{
+	
+}
 
 
 
